add requirements and add celery func

--- a/media_sys/templates/qiniu_edit_page.html
+++ b/media_sys/templates/qiniu_edit_page.html
@@ -8,8 +8,8 @@
     <meta name="description" content="BI system demo">
     <meta name="author" content="Louis">
 
-    <script src="http://172.16.17.100:8081/jquery-3.3.1.min.js"></script>
-    <link rel="stylesheet" href="http://172.16.17.100:8081/boostrap/css/bootstrap.min.css">
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="http://img.foshanplus.com/bootstrap_3css/bootstrap.min.css">
 
     <title>测试</title>
 
@@ -25,7 +25,9 @@
                       <input type="text" class="form-control" placeholder="输入图片前缀....." id="key">
                       <span class="input-group-btn">
                         <button class="btn btn-default" type="button" onclick="find_items()">搜索</button>
+                         <a class="btn btn-default" type="button" href="/qnpic">添加照片</a>
                       </span>
+
                     </div><!-- /input-group -->
                 </div>
 
